--- a/contact.html
+++ b/contact.html
@@ -103,25 +103,26 @@
 <section id="message">
     <div class="message p-5">
         <div class="container">
+        <form action="includes/contactadd.inc.php" method="POST" onsubmit="return validate()">
             <div class="row px-3">
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Name" class="form-control form-control-lg">
+                    <input type="text" id="text" name="name" placeholder="Name" class="form-control form-control-lg">
                 </div>
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Phone Number" class="form-control form-control-lg">
+                    <input type="text" id="text" name="phoneno" placeholder="Phone Number" class="form-control form-control-lg">
                 </div>
             </div>
             <div class="row px-3">
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                    <input type="text" id="text" name="emailid" placeholder="Email" class="form-control form-control-lg">
                 </div>
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Subject" class="form-control form-control-lg">
+                    <input type="text" id="text" name="subject" placeholder="Subject" class="form-control form-control-lg">
                 </div>
             </div>
             <div class="row px-3">
                 <div class="col-12 my-3">
-                        <textarea rows="5" class="form-control form-control-lg"></textarea>
+                        <textarea rows="5" name="message" class="form-control form-control-lg"></textarea>
                 </div>
             </div>
             <div class="row">
@@ -129,14 +130,37 @@
                     <button type="submit" class="btn msg-btn">SEND MESSAGE</button>
                 </div>
             </div>
-            
         </div>
+    </form>
     </div>
 </section>
-
-
-
 <!-- End Message Section -->
+
+<!-- Form Validation 
+<script type="text/javascript">
+function validate(){
+    var uname = document.getElementByName("name").value;
+    var uphoneno = document.getElementByName("phoneno").value;
+    var uemailid = document.getElementByName("emailid").value;
+    var usubject = document.getElementByName("subject").value;
+    var umessage = document.getElementByName("message").value;
+
+    var regex_name =  /^[\\p{L} .'-]+$/;
+    var regex_phoneno = /[7-9]{1}\d{9}/;
+    var regex_emailid = /^([a-z A-z 0-9 \. _])+@([a-z A-Z 0-9])+\.([a-z A-z]){2,10}(\.([A-Z a-z]){2,10})?$/;
+    if(regex_emailid.test(uemailid)){
+        alert("Invalid Name");
+        return false;
+    } 
+        
+
+}
+</script>
+
+-->
+
+<!-- End From Validation-->
+
 
 <!-- Contact Section -->
 <section id="contact">
