--- a/contact.html
+++ b/contact.html
@@ -103,25 +103,31 @@
 <section id="message">
     <div class="message p-5">
         <div class="container">
+        <form name="contact_form" action="includes/contactadd.inc.php" method="POST" onsubmit="return validate(contact_form)">
             <div class="row px-3">
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Name" class="form-control form-control-lg">
+                    <input type="text" id="text" name="name" placeholder="Name" class="form-control form-control-lg">
+                	<h6 class="hidden-text" id="invalid_name">*Name is mandatory</h6>
                 </div>
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Phone Number" class="form-control form-control-lg">
+                    <input type="text" id="text" name="phoneno" placeholder="Phone Number" class="form-control form-control-lg">
+                    <h6 class="hidden-text" id="invalid_pno">*Invalid Phone Number</h6>
                 </div>
             </div>
             <div class="row px-3">
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                    <input type="text" id="text" name="emailid" placeholder="Email" class="form-control form-control-lg">
+                    <h6 class="hidden-text" id="invalid_email">*Invalid Email</h6>
                 </div>
                 <div class="col-6 my-3">
-                    <input type="text" id="text" placeholder="Subject" class="form-control form-control-lg">
+                    <input type="text" id="text" name="subject" placeholder="Subject" class="form-control form-control-lg">
+                    <h6 class="hidden-text" id="invalid_subj">*Subject is mandatory</h6>
                 </div>
             </div>
             <div class="row px-3">
                 <div class="col-12 my-3">
-                        <textarea rows="5" class="form-control form-control-lg"></textarea>
+                    <textarea rows="5" name="message" class="form-control form-control-lg"></textarea>
+                    <h6 class="hidden-text" id="invalid_msg">*Message cannot be blank</h6>
                 </div>
             </div>
             <div class="row">
@@ -129,14 +135,76 @@
                     <button type="submit" class="btn msg-btn">SEND MESSAGE</button>
                 </div>
             </div>
-            
         </div>
+    </form>
     </div>
 </section>
-
-
-
 <!-- End Message Section -->
+
+<!-- Form Validation -->
+<script type="text/javascript">
+function validate(myform){
+	
+	document.getElementById('invalid_name').style.visibility = 'hidden';
+	document.getElementById('invalid_pno').style.visibility = 'hidden';
+	document.getElementById('invalid_email').style.visibility = 'hidden';
+	document.getElementById('invalid_subj').style.visibility = 'hidden';
+	document.getElementById('invalid_msg').style.visibility = 'hidden';
+
+
+	var regex_name =  /^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$/;
+    var regex_phoneno = /[7-9]{1}\d{9}/;
+    var regex_emailid = /^([a-z A-z 0-9 \. _])+@([a-z A-Z 0-9])+\.([a-z A-z]){2,10}(\.([A-Z a-z]){2,10})?$/;
+    var regex_subj =  /^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$/;
+    var regex_msg =  /^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$/;
+
+    var flag  = 1;
+
+    if(regex_name.test(myform.name.value) == false)
+	    {
+	    	flag  = 0;
+			document.getElementById('invalid_name').style.visibility = 'visible'; 
+			myform.name.focus();
+	    }
+    if(regex_phoneno.test(myform.phoneno.value) == false)
+	    {
+	    	flag  = 0;
+			document.getElementById('invalid_pno').style.visibility = 'visible'; 
+			myform.phoneno.focus();
+	    }
+    if(regex_emailid.test(myform.emailid.value) == false)
+	    {
+	    	flag  = 0;
+			document.getElementById('invalid_email').style.visibility = 'visible'; 
+			myform.emailid.focus();
+	    }
+	if(regex_subj.test(myform.subject.value) == false)
+	    {
+	    	flag  = 0;
+			document.getElementById('invalid_subj').style.visibility = 'visible'; 
+			myform.subject.focus();
+	    }
+	if(regex_msg.test(myform.message.value) == false)
+	    {
+	    	flag  = 0;
+			document.getElementById('invalid_msg').style.visibility = 'visible'; 
+			myform.message.focus();
+	    }
+    if(flag == 0){
+    	return false;
+    }
+    else{
+    	return true;
+    }
+}
+
+
+</script>
+
+
+
+<!-- End From Validation-->
+
 
 <!-- Contact Section -->
 <section id="contact">
