--- a/inventory.html
+++ b/inventory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Inventorys | RegenX</title>
+    <title>Inventory | RegenX</title>
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!--main CSS-->
