--- a/sell.html
+++ b/sell.html
@@ -79,68 +79,161 @@
         </header>
         <!--End Header Section-->
     </div>
-    	<!-- Contact Section -->
-	<section id="contact">
-		<div class="contact d-flex justify-content-center py-5">
-			<div class="container">
-			<div class="row">
-				<div class="col d-flex justify-content-center pt-4">
-					<img src="img/wregenx.png" alt="" class="contact-brand">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col d-flex justify-content-center text-center p-4">
-					<div class="w-50">
-						<h5 class="main-text">SHOWROOM LOCATION:</h5>
-						<h5 class="info-text">Sector-V, Nerul, Navi Mumbai, Maharashtra 400706</h5>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
-					<div class="text w-50">
-						<h5 class="main-text">PHONE:</h5>
-						<h5 class="info-text">+91 9911773355</h5>
-					</div>
-				</div>
-				<div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
-					<div class="w-50">
-						<h5 class="main-text">HOURS:</h5>
-						<h5 class="info-text">Mon-Sun: 9am-8pm</h5>
-						<h5 class="info-text">(Tuesday: Closed)</h5>	
-					</div>
-				</div>
-				<div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
-					<div class="w-50">
-						<h5 class="main-text">EMAIL:</h5>
-						<h5 class="info-text">xyz@siesgst.ac.in</h5>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col d-flex justify-content-center text-center p-5">
-					<div class="w-50">
-						<div class="nav-icons d-none d-lg-block"></div>
-						<a href="https://www.facebook.com" class="con-icon"> 
-							<i class="fab fa-facebook"></i>
-						</a>
-						<a href="https://www.twitter.com" class="con-icon"> 
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="https://www.instagram.com" class="con-icon"> 
-							<i class="fab fa-instagram"></i>
-						</a>
-						<a href="https://www.snapchat.com" class="con-icon"> 
-							<i class="fab fa-snapchat"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		</div>
-	</section>
 
-	<!-- End Contact Section -->
+    <!-- Sell Form -->
+    <section id="sell">
+        <div class="py-5">
+            <div class="container sell py-5">
+                <form method="POST" action="" onsubmit="return Validate()" name="cform" >
+                    <div class="col-6 mx-auto my-3 col-md-6 text-center">
+                        <h5 class="font-weight-bolder info-text ">SELL YOUR CAR TO US</h5>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>                    
+                    <div class="col-6 mx-auto my-3 col-md-6 text-center">
+                            <h5 class="font-weight-bolder">VEHICLE INFO</h5>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row  justify-content-center">
+                        <div class="col-6 my-3">
+                            <input type="text" id="text" placeholder="Email" class="form-control form-control-lg">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col my-3 text-center">
+                            <input type="submit" value="SEND MESSAGE" class="btn msg-btn"></input>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- End Sell Form -->
+
+
+
+
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="contact d-flex justify-content-center py-5">
+            <div class="container">
+            <div class="row">
+                <div class="col d-flex justify-content-center pt-4">
+                    <img src="img/wregenx.png" alt="" class="contact-brand">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center text-center p-4">
+                    <div class="w-50">
+                        <h5 class="main-text">SHOWROOM LOCATION:</h5>
+                        <h5 class="info-text">Sector-V, Nerul, Navi Mumbai, Maharashtra 400706</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
+                    <div class="text w-50">
+                        <h5 class="main-text">PHONE:</h5>
+                        <h5 class="info-text">+91 9911773355</h5>
+                    </div>
+                </div>
+                <div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
+                    <div class="w-50">
+                        <h5 class="main-text">HOURS:</h5>
+                        <h5 class="info-text">Mon-Sun: 9am-8pm</h5>
+                        <h5 class="info-text">(Tuesday: Closed)</h5>	
+                    </div>
+                </div>
+                <div class="col-12 my-2 col-md-4 d-flex justify-content-center text-center">
+                    <div class="w-50">
+                        <h5 class="main-text">EMAIL:</h5>
+                        <h5 class="info-text">xyz@siesgst.ac.in</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center text-center p-5">
+                    <div class="w-50">
+                        <div class="nav-icons d-none d-lg-block"></div>
+                        <a href="https://www.facebook.com/" class="con-icon"> 
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://www.twitter.com" class="con-icon"> 
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com" class="con-icon"> 
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.snapchat.com" class="con-icon"> 
+                            <i class="fab fa-snapchat"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- End Contact Section -->
 
 	<!-- Footer -->
 	<footer class="footer py-3">
