--- a/inventory.html
+++ b/inventory.html
@@ -79,7 +79,74 @@
         </header>
         <!--End Header Section-->
     </div>
-    	<!-- Contact Section -->
+
+
+    
+    <!-- Single Car -->
+    <div class="col-12 mx-auto my-3 col-md-3">
+        <div class="card inv-car-card">
+            <!-- Card Body -->
+            <div class="car-body py-4">
+                <div class="car-info d-flex justify-content-between px-3">
+                    <!-- First Flex Child -->
+                    <div class="car-text">
+                        <h4 class="font-weight-bold inv-head-text">CAR MAKER/Model</h4>
+                        <div class="inv-line-1 inv-head-text"></div>
+                        <div class="inv-line-2 inv-head-text"></div>
+                    </div>                   
+                </div>     
+            </div>
+            <!-- End Card Body -->
+            <div class="inv-img-container d-flex">
+                <img src="img/invcar.png" class="card-img-top inv-car-img" alt="">
+            </div>
+            <div class="container py-2">
+                <div class="row px-2">
+                    <div class=" col-3 p-2">
+                        <div class="inv-check-card justify-content-center text-center p-2">
+                            <div class="inv-check-icon p-2 rounded-circle">
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h6 class="inv-check-text" style="color:white">Rating</h6>
+                        </div>
+                    </div>
+                    <div class=" col-3 p-2">
+                        <div class="inv-check-card justify-content-center text-center p-2">
+                            <div class="inv-check-icon p-2 rounded-circle">
+                                <i class="fas fa-dot-circle"></i>
+                            </div>
+                            <h6 class="inv-check-text" style="color:white">Color</h6>
+                        </div>
+                    </div>
+                    <div class=" col-3 p-2">
+                        <div class="inv-check-card justify-content-center text-center p-2">
+                            <div class="inv-check-icon p-2 rounded-circle">
+                                <i class="fas fa-tachometer-alt"></i>
+                            </div>
+                            <h6 class="inv-check-text" style="color:white">Miles</h6>
+                        </div>
+                    </div>
+                    <div class=" col-3 p-2">
+                        <div class="inv-check-card justify-content-center text-center p-2">
+                            <div class="inv-check-icon p-2 rounded-circle">
+                                <i class="fas fa-fire-alt"></i>
+                            </div>
+                            <h6 class="inv-check-text" style="color:white">Engine</h6>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="card-footer d-flex justify-content-center py-4">
+                <a href="" class="inv-car-value text-center py-2 px-3">   
+                        $10,000
+                </a>    
+            </div>
+        </div>
+    </div>
+    <!-- End Single Car -->
+
+    <!-- Contact Section -->
 	<section id="contact">
 		<div class="contact d-flex justify-content-center py-5">
 			<div class="container">
