--- a/inventory.html
+++ b/inventory.html
@@ -83,7 +83,7 @@
 
     
     <!-- Single Car -->
-    <div class="col-12 mx-auto my-3 col-md-3">
+    <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
         <div class="card inv-car-card">
             <!-- Card Body -->
             <div class="car-body py-4">
@@ -103,35 +103,35 @@
             <div class="container py-2">
                 <div class="row px-2">
                     <div class=" col-3 p-2">
-                        <div class="inv-check-card justify-content-center text-center p-2">
-                            <div class="inv-check-icon p-2 rounded-circle">
+                        <div class="inv-check-card text-center py-2">
+                            <div class="inv-check-icon py-2">
                                 <i class="far fa-star"></i>
                             </div>
-                            <h6 class="inv-check-text" style="color:white">Rating</h6>
+                            <h6 class="inv-check-text" >Rating</h6>
                         </div>
                     </div>
                     <div class=" col-3 p-2">
-                        <div class="inv-check-card justify-content-center text-center p-2">
-                            <div class="inv-check-icon p-2 rounded-circle">
+                        <div class="inv-check-card text-center py-2">
+                            <div class="inv-check-icon py-2">
                                 <i class="fas fa-dot-circle"></i>
                             </div>
-                            <h6 class="inv-check-text" style="color:white">Color</h6>
+                            <h6 class="inv-check-text">Color</h6>
                         </div>
                     </div>
                     <div class=" col-3 p-2">
-                        <div class="inv-check-card justify-content-center text-center p-2">
-                            <div class="inv-check-icon p-2 rounded-circle">
+                        <div class="inv-check-card text-center py-2">
+                            <div class="inv-check-icon py-2">
                                 <i class="fas fa-tachometer-alt"></i>
                             </div>
-                            <h6 class="inv-check-text" style="color:white">Miles</h6>
+                            <h6 class="inv-check-text">Miles</h6>
                         </div>
                     </div>
                     <div class=" col-3 p-2">
-                        <div class="inv-check-card justify-content-center text-center p-2">
-                            <div class="inv-check-icon p-2 rounded-circle">
+                        <div class="inv-check-card text-center py-2">
+                            <div class="inv-check-icon py-2">
                                 <i class="fas fa-fire-alt"></i>
                             </div>
-                            <h6 class="inv-check-text" style="color:white">Engine</h6>
+                            <h6 class="inv-check-text">Engine</h6>
                         </div>
                     </div>
                     
