--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<a href="index.html" class="nav-link">HOME</a>
 			</li>
 			<li class="nav-item"> 
-				<a href="inventory.html" class="nav-link">INVENTORY</a>
+				<a href="inventory.php" class="nav-link">INVENTORY</a>
 			</li>
 			<li class="nav-item"> 
 				<a href="story.html" class="nav-link">OUR STORY</a>
