--- a/sell.html
+++ b/sell.html
@@ -85,7 +85,7 @@
         <div class="sell py-5">
             <div class="container">
     
-            <form name="sell_form" action="" method="POST" onsubmit="return svalidate(sell_form)">
+            <form name="sell_form" action="includes/sellusadd.inc.php" method="POST" onsubmit="return svalidate(sell_form)">
                 <div class="col-6 mx-auto my-3 col-md-6 text-center">
                     <h5 class="font-weight-bolder">SELL YOUR CAR TO US</h5>
                 </div>
@@ -160,20 +160,6 @@
                         <h6>Insurance Till</h6>
                         <input type="text" name="insc" class="form-control form-control-lg">
                         <h6 class="hidden-text" id="invalid_insc">*This Field is Required</h6>
-                    </div>
-                </div>
-                <div class="row  justify-content-center">
-                    <div class="col-6 my-3">
-                        <h6>Trim</h6>
-                        <input type="text" name="trim" class="form-control form-control-lg">
-                        <h6 class="hidden-text" id="invalid_trim">*This Field is Required</h6>
-                    </div>
-                </div>
-                <div class="row  justify-content-center">
-                    <div class="col-6 my-3">
-                        <h6>Vin</h6>
-                        <input type="text" name="vin" class="form-control form-control-lg">
-                        <h6 class="hidden-text" id="invalid_vin">*This Field is Required</h6>
                     </div>
                 </div>
                 <div class="row  justify-content-center">
