--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,9 @@
 <div class="default-header">
     <!--nav element-->
     <nav class="navbar navbar-expand-lg p-3" id="navBar">
-    <img class src="img/wregenx.png" height="50" alt="logo">
+    <a href="index.html">
+        <img class src="img/wregenx.png" height="50" alt="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle='collapse' data-target='#myNav'>
         <span class="navbar-icon">
             <i class="fas fa-bars"></i>
@@ -213,7 +215,9 @@ function validate(myform){
         <div class="container">
         <div class="row">
             <div class="col d-flex justify-content-center pt-4">
-                <img src="img/wregenx.png" alt="" class="contact-brand">
+                <a href="contact.html">
+                    <img src="img/wregenx.png" alt="" class="contact-brand">
+                </a>
             </div>
         </div>
         <div class="row">
