--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 						</div>
 						<!-- End Card Body -->
 						<div class="inv-img-container d-flex">
-							<img src="img/car-img/bentley-mulsanne.jpg" class="card-img-top inv-car-img" alt="">
+							<img src="img/car-img/bentley mulsanne.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
 							<div class="row px-2">
@@ -476,7 +476,7 @@
 						</div>
 						<!-- End Card Body -->
 						<div class="inv-img-container d-flex">
-							<img src="img/car-img/porsche-panamera.jpg" class="card-img-top inv-car-img" alt="">
+							<img src="img/car-img/porche panamera.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
 							<div class="row px-2">
