Fixed Card Image

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/bmw-i8.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
@@ -313,7 +313,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/aston-martin-v8-vantage.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
@@ -367,7 +367,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/bentley mulsanne.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
@@ -421,7 +421,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/ford-mustang.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
@@ -475,7 +475,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/porche panamera.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
@@ -529,7 +529,7 @@
 							</div>     
 						</div>
 						<!-- End Card Body -->
-						<div class="inv-img-container d-flex">
+						<div class="inv-img-container d-flex p-2">
 							<img src="img/car-img/jaguar-xf.jpg" class="card-img-top inv-car-img" alt="">
 						</div>
 						<div class="container py-2">
