--- a/sell.html
+++ b/sell.html
@@ -48,7 +48,10 @@
             </li>	
             <li class="nav-item"> 
                 <a href="sell.html" class="nav-link">SELL YOUR CAR</a>
-            </li>		
+            </li>
+			<li class="nav-item"> 
+				<a href="admin.html" class="nav-link">ADMIN</a>
+			</li>		
             </ul> 
             <!--Social Icons-->
             <div class="nav-icons d-none d-lg-block"></div>
