--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             <a href="sell.html" class="nav-link">SELL YOUR CAR</a>
         </li>
         <li class="nav-item"> 
-            <a href="admin.html" class="nav-link">ADMIN</a>
+            <a href="admin.php" class="nav-link">ADMINs/a>
         </li>		
         </ul> 
         <!--Social Icons-->
