--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,9 @@
         </li>	
         <li class="nav-item"> 
             <a href="sell.html" class="nav-link">SELL YOUR CAR</a>
+        </li>
+        <li class="nav-item"> 
+            <a href="admin.php" class="nav-link">ADMIN</a>
         </li>		
         </ul> 
         <!--Social Icons-->
