Img upload in sell form

--- a/sell.html
+++ b/sell.html
@@ -90,7 +90,7 @@
         <div class="sell py-5">
             <div class="container">
     
-            <form name="sell_form" action="includes/sellusadd.inc.php" method="POST" onsubmit="return svalidate(sell_form)">
+            <form name="sell_form" action="includes/sellusadd.inc.php" method="POST" onsubmit="return svalidate(sell_form)" enctype="multipart/form-data">
                 <div class="col-6 mx-auto my-3 col-md-6 text-center">
                     <h5 class="font-weight-bolder">SELL YOUR CAR TO US</h5>
                 </div>
@@ -162,18 +162,18 @@
                 </div>
                 <div class="row  justify-content-center">
                     <div class="col-6 my-3">
-                        <h6>Insurance Till</h6>
-                        <input type="text" name="insc" class="form-control form-control-lg">
-                        <h6 class="hidden-text" id="invalid_insc">*This Field is Required</h6>
-                    </div>
-                </div>
-                <div class="row  justify-content-center">
-                    <div class="col-6 my-3">
                         <h6>Mileage</h6>
                         <input type="text" name="mile" class="form-control form-control-lg">
                         <h6 class="hidden-text" id="invalid_mile">*This Field is Required</h6>
                     </div>
                 </div>
+                <div class="row  justify-content-center">
+                    <div class="col-6 my-3">
+                        <h6>Car Image</h6>
+                        <input type="file" name="file" >
+                        <h6 class="hidden-text" id="invalid_mile">*This Field is Required</h6>
+                    </div>
+                </div>             
                 <div class="row justify-content-center">
                     <div class="col-6 my-3">
                         <h6>Your Message</h6>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="row">
                     <div class="col my-3 text-center">
-                        <input type="submit" value="SEND" class="btn msg-btn"></input>
+                        <input type="submit" value="SEND" name="submit" class="btn msg-btn"></input>
                     </div>
                 </div>
             </div>
